fixed booking form alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -155,5 +155,6 @@ cursor: pointer;
   border-radius: 4px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
   margin-bottom:20px;
+  left: 35px;
 
 }
